[gd_scene load_steps=7 format=3 uid="uid://ti5dnrlnocox"]

[ext_resource type="Script" path="res://Scenes/Enemeys/Enemy.gd" id="1_4u4h7"]
[ext_resource type="Texture2D" uid="uid://bx2dcegbutm0j" path="res://Assets/Img/B).png" id="2_20i51"]
[ext_resource type="AudioStream" uid="uid://dsfpyw13lxay0" path="res://Assets/Sounds/shoot.mp3" id="3_tcojk"]
[ext_resource type="AudioStream" uid="uid://bumjyq70v38gp" path="res://Assets/Sounds/enmey_dead.mp3" id="4_uwifl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3obk3"]
size = Vector2(232, 232)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clax8"]
size = Vector2(232, 232)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(236, 108)
script = ExtResource("1_4u4h7")

[node name="MovementTimer" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.81253e-06, 2.20537e-06)
scale = Vector2(1.0131, 1)
texture = ExtResource("2_20i51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3obk3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_clax8")

[node name="FireTickTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="FireBrunTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="LightStunTimer" type="Timer" parent="."]

[node name="IceSlowTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tcojk")
bus = &"Sfx"

[node name="EnemyDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uwifl")
bus = &"Sfx"

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
bus = &"Sfx"

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="FireTickTimer" to="." method="_on_fire_tick_timer_timeout"]
[connection signal="timeout" from="FireBrunTimer" to="." method="_on_fire_brun_timer_timeout"]
[connection signal="timeout" from="LightStunTimer" to="." method="_on_light_stun_timer_timeout"]
[connection signal="timeout" from="IceSlowTimer" to="." method="_on_ice_slow_timer_timeout"]
[connection signal="finished" from="EnemyDead" to="." method="_on_enemy_dead_finished"]
